[gd_scene load_steps=3 format=3 uid="uid://cwwjrhl86b5co"]

[ext_resource type="Script" path="res://UI/PlayerUI.gd" id="1_t1xia"]
[ext_resource type="Texture2D" uid="uid://cevwwt6qqsi4e" path="res://UI/Pan_Blue_Circle.png" id="2_s1las"]

[node name="CanvasLayer" type="CanvasLayer"]
script = ExtResource("1_t1xia")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="BlockLabel" type="Label" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 16.0
offset_right = 67.0
offset_bottom = 42.0
text = "Block :"

[node name="ProgressBar" type="ProgressBar" parent="Control/BlockLabel"]
layout_mode = 0
offset_left = 55.0
offset_right = 255.0
offset_bottom = 27.0
tooltip_text = "Block Guage"
value = 100.0

[node name="DashCharge" type="Label" parent="Control"]
layout_mode = 0
offset_left = 16.0
offset_top = 46.0
offset_right = 67.0
offset_bottom = 72.0
text = "Dash :"

[node name="firstDashCharge" type="TextureProgressBar" parent="Control/DashCharge"]
layout_mode = 0
offset_left = 55.0
offset_top = 4.0
offset_right = 732.0
offset_bottom = 681.0
scale = Vector2(0.0261876, 0.0261876)
value = 100.0
fill_mode = 4
texture_progress = ExtResource("2_s1las")

[node name="secondDashCharge" type="TextureProgressBar" parent="Control/DashCharge"]
layout_mode = 0
offset_left = 75.0
offset_top = 4.0
offset_right = 752.0
offset_bottom = 681.0
scale = Vector2(0.0261876, 0.0261876)
value = 100.0
fill_mode = 4
texture_progress = ExtResource("2_s1las")

[node name="thirdDashCharge" type="TextureProgressBar" parent="Control/DashCharge"]
layout_mode = 0
offset_left = 95.0
offset_top = 4.0
offset_right = 772.0
offset_bottom = 681.0
scale = Vector2(0.0261876, 0.0261876)
value = 100.0
fill_mode = 4
texture_progress = ExtResource("2_s1las")
